--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -20,13 +20,13 @@
         android:id="@+id/superheroImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
+        android:padding="20dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/profile_pic"/>
+        app:srcCompat="@drawable/occpirate"/>
 
     <TextView
         android:id="@+id/quizTypeTextView"
